--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 /* Top Section Start */
 .top-heading {
@@ -148,21 +148,20 @@ h3 {
 .customer-support {
   display: flex;
   margin-bottom: 50px;
-  padding-left: 10%;
-  padding-right: 10%;
+  padding-left: 5%;
+  padding-right: 5%;
 }
 .customer-support-details {
   width: 40%;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   border-radius: 5px;
-  margin: 20px;
-  padding: 20px;
+  margin: 10px;
+  padding: 10px;
   text-align: center;
 }
-
 li {
   list-style-type: none;
-  text-align: justify;
+  text-align: center;
   padding: 5px;
 }
 
@@ -176,13 +175,6 @@ li {
   border-radius: 50%;
   color: #fff;
   text-align: center;
-}
-
-.check-icon {
-  margin-left: 150px;
-  background-color: #0fbcf9;
-  border-radius: 50%;
-  color: #fff;
 }
 .help-button {
   text-align: center;
